--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "@types/react": "~17.0.21"
+    "@types/react": "~17.0.21",
+    "styled-components": "^5"
   },
   "overrides": {
     "@types/react": "~17.0.21"
